Moving missing-doclet to be a regular project (not an included project).